- Added inconsistencies tool which allows you to track down faulty/broken references to deleted contents or pages or components. Also enables you to delete such references.
- Added feature so you now can specify disallowedComponentNames instead of allowedComponentNames on slots if you want. 
 
-------------------------------------------------------------------------------------
- InfoGlue 2.4.1 Final
-------------------------------------------------------------------------------------

Release notes
---------------------------------------
This is a bug-fix release for 2.4 which seems to have been released a bit premature. Thanx for the feedback all!!
Everybody must use this rather than 2.4.

Thanx to all involved!!

The InfoGlue Team


Abbreviated Changelog from 2.4 Final 
---------------------------------------
- Fixed so export file names are converted to avoid i18n-chars when exporting a repository
- Added a new section in management tool for archiving and restoring assets of old content versions. 
  This allows administrators to minimize the database space taken by InfoGlue. Up to 90 % of the database are usually digital assets so it can save a lot of backup space and time.
- Added principal to recursive deletion check for site nodes and contents - there was a flaw in protection before on that point
- Fixed flaw in InfoGlueJDBCPropertySet which gave errors when trying to save data in completely fresh databases
- Fixed a bug in content version edit - FCKEditor has changed and interfers with body onload so now we do it in the script-part instead.

-------------------------------------------------------------------------------------
- InfoGlue 2.4 Final
-------------------------------------------------------------------------------------

Release notes
---------------------------------------
The InfoGlue Team are happy to release the best version yet. InfoGlue 2.4 is available for immediate download.